# vad_transcribe_py

./: .env.example  .gitignore  AGENT.md  FEATURE_FLAGS.md  README.md  WEB_SETUP.md  batch_summarize.sh  batch_transcribe.py  batch_transcribe.sh  convert_transcript.py  file_lock.py  main.py  open_backup.py  pyproject.toml  pyproject.toml.bak  summarize_processor.py  transcript_processor.py
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
configs/: am1300.toml  am1430.toml  knx.toml  rthk1.toml  rthk2.toml
docs/: repetition-handling.md
frontend/: README.md  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: AppLayout.tsx
frontend/src/components/ui/: tabs.tsx
frontend/src/pages/: HistoryPage.tsx  RecordPage.tsx
frontend/src/workers/: audio-processor.ts
scripts/: build_frontend.sh  release.py
speech_detector/: mic_recorder.py  speech_detector.py
tests/: conftest.py  test_audio_transcriber.py  test_audio_transcriber_drop_notices.py  test_cli_integration.py  test_nvidia_whisper.py  test_queue_backlog_limiter.py  test_server.py  test_vad_processor.py
vad_transcribe_py/: _types.py  _utils.py  audio_transcriber.py  cli.py  file_lock.py  replay_detector.py  vad_processor.py
vad_transcribe_py/backends/: __init__.py  _torch_threads.py  glm_asr.py  glm_asr_mlx.py  mlx.py  moonshine.py  nvidia_whisper.py  qwen.py  qwen_asr_mlx.py  qwen_rs.py  whisper.py
vad_transcribe_py/moonshine/: __init__.py  download.py  models.py  tokenizer.py  transcriber.py
whisper_transcribe_py/: audio_data_saver.py  audio_file_saver.py  audio_transcriber.py  cli.py  db.py  file_lock.py  mic_recorder.py  speech_detector.py  sqlite_decoder.py  vad_processor.py
whisper_transcribe_py/api/: server.py  streaming.py
whisper_transcribe_py/moonshine/: download.py  models.py  tokenizer.py  transcriber.py
