[project]
name = "whisper-transcribe-py"
version = "0.1.3"
description = ""
authors = [{ name = "Andrew Chen", email = "andrew@jaanuu.com" }]
requires-python = "~=3.12.0"
readme = "README.md"
dependencies = [
    "silero-vad>=5.1.2,<6",
    "argparse>=1.4.0,<2",
    "scipy>=1.14.1,<2",
    "python-dotenv>=1.0.1,<2",
    "numpy>=2.2.1,<3",
    "zhconv-rs>=0.3.2.post2,<0.4",
]

[project.scripts]
whisper-transcribe-py = "whisper_transcribe_py.cli:main"

[project.optional-dependencies]
transcribe = [
    "pywhispercpp @ git+https://github.com/absadiki/pywhispercpp@v1.3.3",
    "faster-whisper>=1.0.0,<2",
]
dev = [
    "pytest>=9.0.0,<10",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
filterwarnings = [
    # Ignore deprecation warnings from third-party libraries
    "ignore::DeprecationWarning:silero_vad.*",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
