[project]
name = "vad-transcribe-py"
version = "0.2.6"
description = ""
authors = [{ name = "Andrew Chen", email = "andrew@jaanuu.com" }]
requires-python = "~=3.14.0"
readme = "README.md"
dependencies = [
    "silero-vad>=5.1.2,<6",
    "argparse>=1.4.0,<2",
    "scipy>=1.14.1,<2",
    "python-dotenv>=1.0.1,<2",
    "numpy>=2.2.1,<3",
    "zhconv-rs>=0.3.2.post2,<0.4",
]

[project.scripts]
vad-transcribe-py = "vad_transcribe_py.cli:main"

[project.optional-dependencies]
transcribe = [
    "transformers>=4.52",
    "accelerate>=1.0",
    "onnxruntime",
    "platformdirs",
    "tqdm",
    "filelock",
    "httpx",
    "qwen-asr>=0.0.6",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
filterwarnings = [
    # Ignore deprecation warnings from third-party libraries
    "ignore::DeprecationWarning:silero_vad.*",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0,<10",
    "ruff>=0.14.6",
    "basedpyright>=1.29.0",
]

[tool.pyright]
exclude = [".venv", "build", "dist", ".git", "tests", "scripts"]
reportUnknownParameterType = true
reportUninitializedInstanceVariable = true
reportMissingTypeStubs = false
reportExplicitAny = false
reportAny = false
reportUnannotatedClassAttribute = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportImplicitStringConcatenation = false
reportMissingImports = true
reportMissingModuleSource = false
reportUnusedCallResult = false
reportImplicitOverride = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
